Second example added!

--- a/01. Classifiers comparison.ipynb
+++ b/01. Classifiers comparison.ipynb
@@ -7,7 +7,7 @@
     "editable": true
    },
    "source": [
-    "# SciKit Learn Classifiers comparison"
+    "# Scikit Learn Classifiers comparison"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "source": [
     "names = [\"Nearest Neighbors\", \"Linear SVM\", \"RBF SVM\", \"Gaussian Process\",\n",
     "         \"Decision Tree\", \"Random Forest\", \"Neural Net\", \"AdaBoost\",\n",
-    "         \"Naive Bayes\", \"QDA\"]\n",
+    "         \"Naive Bayes\", \"Quadratic Discriminant Analysis\"]\n",
     "\n",
     "classifiers = [\n",
     "    KNeighborsClassifier(3),\n",
@@ -131,23 +131,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['female'] \t Nearest Neighbors\n",
-      "['female'] \t Linear SVM\n",
-      "['female'] \t RBF SVM\n",
-      "['female'] \t Gaussian Process\n",
-      "['female'] \t Decision Tree\n",
-      "['female'] \t Random Forest\n",
-      "['female'] \t Neural Net\n",
-      "['female'] \t AdaBoost\n",
-      "['female'] \t Naive Bayes\n",
-      "['female'] \t QDA\n"
+      "['female'] Nearest Neighbors\n",
+      "['female'] Linear SVM\n",
+      "['female'] RBF SVM\n",
+      "['female'] Gaussian Process\n",
+      "['female'] Decision Tree\n",
+      "['female'] Random Forest\n",
+      "['female'] Neural Net\n",
+      "['female'] AdaBoost\n",
+      "['female'] Naive Bayes\n",
+      "['female'] Quadratic Discriminant Analysis\n"
      ]
     }
    ],
    "source": [
     "for name, clf in zip(names, classifiers):\n",
     "    clf.fit(X, Y)\n",
-    "    print(clf.predict([[170, 65, 38]]), \"\\t\", name)"
+    "    print(clf.predict([[170, 65, 38]]), name)"
    ]
   }
  ],
