First challenge solved! video replaced

--- a/Month 1 - Data Analysis/Week 1 - Learn Python/1. Classifiers comparison.ipynb
+++ b/Month 1 - Data Analysis/Week 1 - Learn Python/1. Classifiers comparison.ipynb
@@ -11,31 +11,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/T5pRlIbr6gg\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "from IPython.display import HTML\n",
-    "# Video credit: Siraj Raval\n",
-    "# Youtube\n",
-    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/T5pRlIbr6gg\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>')"
+    "Comparison of classifiers, a challenge posed by Siraj Raval in his video [Introduction - Learn Python for Data Science #1](https://youtu.be/T5pRlIbr6gg)."
    ]
   },
   {
