First challenge solved!!!

--- a/Month 1 - Data Analysis/Week 1 - Learn Python/1. Classifiers comparison.ipynb
+++ b/Month 1 - Data Analysis/Week 1 - Learn Python/1. Classifiers comparison.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -138,7 +138,7 @@
       "['male'] Accuracy for RBF SVM: 100.0\n",
       "['male'] Accuracy for Gaussian Process: 100.0\n",
       "['male'] Accuracy for Decision Tree: 100.0\n",
-      "['male'] Accuracy for Random Forest: 100.0\n",
+      "['male'] Accuracy for Random Forest: 93.33333333333333\n",
       "['male'] Accuracy for Neural Net: 53.333333333333336\n",
       "['male'] Accuracy for AdaBoost: 100.0\n",
       "['male'] Accuracy for Naive Bayes: 86.66666666666667\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
