Third challenge!... Recommendation Systems

--- a/Month 1 - Data Analysis/Week 1 - Learn Python/3. Recommendation Systems.ipynb
+++ b/Month 1 - Data Analysis/Week 1 - Learn Python/3. Recommendation Systems.ipynb
@@ -8,6 +8,7 @@
    },
    "source": [
     "# Recommendation Systems\n",
+    "Code for [Recommendation Systems - Learn Python for Data Science #3](https://youtu.be/9gBC9R-msAk). <br>\n",
     "Import libraries"
    ]
   },
@@ -42,7 +43,6 @@
     "editable": true
    },
    "source": [
-    "## Movie dataset\n",
     "![The MovieLens dataset](https://image.slidesharecdn.com/harper-movielens-history-v2-shared-160309161738/95/the-movielens-datasets-history-and-context-3-638.jpg?cb=1457540394)\n",
     "Fetch data and format it.\n",
     "Print training and testing data."
@@ -82,7 +82,8 @@
     "editable": true
    },
    "source": [
-    "Create the model and training...\n",
+    "### Training\n",
+    "Creating the model and training... <br>\n",
     "warp: Weighted Approximate-Rank pairwise"
    ]
   },
@@ -98,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "<lightfm.lightfm.LightFM at 0x1f4d546e588>"
+       "<lightfm.lightfm.LightFM at 0x2186c018f28>"
       ]
      },
      "execution_count": 3,
@@ -119,12 +120,42 @@
     "editable": true
    },
    "source": [
-    "Sample recommendation function."
+    "### Formating Output\n",
+    "Function to print a user recommendation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def formated_print(user_id, known_positives, top_recommendations):\n",
+    "    # print out the results\n",
+    "    print(\"\\nUser %s\" % user_id)\n",
+    "    # print top 3 known positives\n",
+    "    print(\"    Known positives:\")        \n",
+    "    for x in known_positives[:3]:\n",
+    "        print(\"        %s\" % x)\n",
+    "    # print top 3 recommendations        \n",
+    "    print(\"    Recommended:\")        \n",
+    "    for x in top_recommendations[:3]:\n",
+    "        print(\"        %s\" % x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recommend!\n",
+    "Function to compute the recommendations for each input user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -135,15 +166,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "User 5\n",
       "    Known positives:\n",
       "        Toy Story (1995)\n",
       "        Babe (1995)\n",
       "        Dead Man Walking (1995)\n",
       "    Recommended:\n",
-      "        Rear Window (1954)\n",
-      "        North by Northwest (1959)\n",
       "        Vertigo (1958)\n",
+      "        Chinatown (1974)\n",
+      "        Casablanca (1942)\n",
+      "\n",
       "User 50\n",
       "    Known positives:\n",
       "        Star Wars (1977)\n",
@@ -153,15 +186,16 @@
       "        Raiders of the Lost Ark (1981)\n",
       "        Star Wars (1977)\n",
       "        Empire Strikes Back, The (1980)\n",
+      "\n",
       "User 500\n",
       "    Known positives:\n",
       "        Twelve Monkeys (1995)\n",
       "        Mighty Aphrodite (1995)\n",
       "        Welcome to the Dollhouse (1995)\n",
       "    Recommended:\n",
-      "        Fargo (1996)\n",
       "        Trainspotting (1996)\n",
-      "        Twelve Monkeys (1995)\n"
+      "        Fargo (1996)\n",
+      "        Scream (1996)\n"
      ]
     }
    ],
@@ -180,17 +214,9 @@
     "        top_items = data['item_labels'][np.argsort(-scores)]\n",
     "        \n",
     "        # print out the results\n",
-    "        print(\"User %s\" % user_id)\n",
-    "        print(\"    Known positives:\")\n",
-    "        \n",
-    "        for x in known_positives[:3]:\n",
-    "            print(\"        %s\" % x)\n",
+    "        formated_print(user_id, known_positives, top_items)\n",
     "            \n",
-    "        print(\"    Recommended:\")\n",
-    "        \n",
-    "        for x in top_items[:3]:\n",
-    "            print(\"        %s\" % x)\n",
-    "            \n",
+    "# make recommendations\n",
     "sample_recommendation(model, data, [5, 50, 500])"
    ]
   }
