--- a/Month 1 - Data Analysis/Week 1 - Learn Python/3. Recommendation Systems.ipynb
+++ b/Month 1 - Data Analysis/Week 1 - Learn Python/3. Recommendation Systems.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Recommendation Systems\n",
     "Code for [Recommendation Systems - Learn Python for Data Science #3](https://youtu.be/9gBC9R-msAk). <br>\n",
@@ -15,11 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -38,10 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![The MovieLens dataset](https://image.slidesharecdn.com/harper-movielens-history-v2-shared-160309161738/95/the-movielens-datasets-history-and-context-3-638.jpg?cb=1457540394)\n",
     "Fetch data and format it.\n",
@@ -51,11 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -77,10 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Training\n",
     "Creating the model and training... <br>\n",
@@ -90,11 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -115,9 +94,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "source": [
     "### Formating Output\n",
@@ -156,11 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -237,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
