Sixth challenge! Genetic Algorithms.

--- a/Month 1 - Data Analysis/Week 1 - Learn Python/6. Genetic Algorithms.ipynb
+++ b/Month 1 - Data Analysis/Week 1 - Learn Python/6. Genetic Algorithms.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9151f32398bb41d7805a046bc4da4d44",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,8 +262,29 @@
      "output_type": "stream",
      "text": [
       "Generation 1 - Current best internal CV score: 0.8807571409227511\n",
-      "Generation 2 - Current best internal CV score: 0.882158829821941\n"
+      "Generation 2 - Current best internal CV score: 0.882158829821941\n",
+      "Generation 3 - Current best internal CV score: 0.882158829821941\n",
+      "Generation 4 - Current best internal CV score: 0.882158829821941\n",
+      "Generation 5 - Current best internal CV score: 0.8833514917918197\n",
+      "\n",
+      "Best pipeline: GradientBoostingClassifier(PolynomialFeatures(MinMaxScaler(input_matrix), degree=2, include_bias=False, interaction_only=False), learning_rate=0.1, max_depth=5, max_features=0.7000000000000001, min_samples_leaf=15, min_samples_split=18, n_estimators=100, subsample=0.55)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TPOTClassifier(config_dict=None, crossover_rate=0.1, cv=5,\n",
+       "        disable_update_check=False, early_stop=None, generations=5,\n",
+       "        max_eval_time_mins=5, max_time_mins=None, memory=None,\n",
+       "        mutation_rate=0.9, n_jobs=1, offspring_size=None,\n",
+       "        periodic_checkpoint_folder=None, population_size=100,\n",
+       "        random_state=None, scoring=None, subsample=1.0, use_dask=False,\n",
+       "        verbosity=2, warm_start=False)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -273,11 +294,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Accuracy\n",
+    "Scoring the accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8767613038906414"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tpot.score(tele.drop('Class', axis=1).loc[validation_indices].values,\n",
+    "           tele.loc[validation_indices, 'Class'].values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As can be seen, the best accuracy is 87.68%. <br>\n",
+    "Finally, we export the generated code in pipeline.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tpot.export('data/pipeline.py')"
+   ]
   }
  ],
  "metadata": {
