12 Linear regression: part4 online LMS

--- a/Month 1 - Data Analysis/Week 3 - Computing for Data Analysis/12 Linear regression/part4-online.ipynb
+++ b/Month 1 - Data Analysis/Week 3 - Computing for Data Analysis/12 Linear regression/part4-online.ipynb
@@ -413,8 +413,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Condition number of the data matrix: 4.384415340104568\n",
-      "Relative error: 0.001781010153233041\n"
+      "Condition number of the data matrix: 4.402827082871629\n",
+      "Relative error: 0.0005573509047109762\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "126768.13225772629\n"
+      "126824.88814180104\n"
      ]
     }
    ],
@@ -485,9 +485,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "nbgrader": {
      "grade": false,
      "grade_id": "lms",
@@ -507,12 +506,37 @@
     "\n",
     "    # Implement the online LMS algorithm.\n",
     "    # Take (y[k], X[k, :]) to be the k-th observation.\n",
-    "    ###\n",
-    "    ### YOUR CODE HERE\n",
-    "    ###\n",
+    "    #print(y[k], X[k, :].T.dot(theta_k))\n",
+    "    delta_k = PHI * X[k, :] * (y[k] - X[k, :].T.dot(theta_k))\n",
+    "    theta_k += delta_k\n",
     "    \n",
     "theta_lms = theta_k\n",
     "rel_diffs[m] = rel_diff(theta_lms, theta_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.33579927 0.44183356]]\n",
+      "[[0.33606651 0.4419893 ]]\n",
+      "[1.56909265 0.78564204]\n",
+      "\n",
+      "('Passed' -- this cell appears to run without error, but we aren't checking the solution.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (theta_true.T)\n",
+    "print (theta.T)\n",
+    "print (theta_lms.T)\n",
+    "\n",
+    "print(\"\\n('Passed' -- this cell appears to run without error, but we aren't checking the solution.)\")"
    ]
   },
   {
